# FDtomoC

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: CMakeLists.txt  c_earthquake_file_delimiter.h  c_g_method.h  c_gridspec.h  c_link_list.h  c_makea.h  c_normlz.h  c_parameter.h  c_runlsqr.h  c_scopy.h  c_snrm2.h  c_sscal.h  c_string_process.h  c_time_process.h  earthquake_file_delimiter.h  environment_setting.h  g_method.h  gridspec.h  parseprogs.h  runlsqr.h  sphrayderv.h  string_process.h  vhead.h
include/FDtomo/: c2f.h  make1d.h  makenewmod.h  runlsqr.h  sphfd.h  sphfdloc.h  sphrayderv.h
include/common/: CMakeLists.txt  earthquake.h  earthquake_file_delimiter.h  environment_setting.h  geographic_method.h  grid.h  gridspec.h  interpolation.h  parseprogs.h  read_spec.h  shared_variables.h  station.h  string_process.h  time_process.h  travel_time.h  velocity_model.h  vhead.h
include/runlsqr/: aprod.h  makea.h  normlz.h  scopy.h  snrm2.h  sscal.h
include/sphrayderv/: bjdaz2.h  dfind.h  elpcr.h  find.h  ljust.h  pmin.h
lib/: CMakeLists.txt
lib/FDtomo/: CMakeLists.txt  c2f.c  make1d.c  make_par_file.c  makenewmod.c  runlsqr.c  sphfd.c  sphfdloc.c  sphrayderv.c
lib/common/: CMakeLists.txt  earthquake.c  earthquake_file_delimiter.c  geographic_method.c  grid.c  gridspec.c  interpolation.c  parseprogs.c  read_spec.c  station.c  string_process.c  time_process.c  travel_time.c  velocity_model.c
lib/common/vec/: CMakeLists.txt  vec.c
lib/runlsqr/: CMakeLists.txt  aprod.c  makea.c  normlz.c  scopy.c  snrm2.c  sscal.c
lib/sphrayderv/: CMakeLists.txt  bjdaz2.c  dfind.c  elpcr.c  find.c  ljust.c  pmin.c
src/: CMakeLists.txt  FDtomo.c  aprod.c  bindToPython.py  bjdaz2.c  c2f.c  c_aprod.c  c_earthquake_file_delimiter.c  c_g_method.c  c_link_list.c  c_makea.c  c_normlz.c  c_parseprogs.c  c_scopy.c  c_snrm2.c  c_sscal.c  c_string_process.c  c_time_process.c  dfind.c  earthquake_file_delimiter.c  elpcr.c  find.c  g_method.c  ljust.c  make1d.c  make_par_file.c  makea.c  makenewmod.c  normlz.c  parseprogs.c  pmin.c  runlsqr.c  scopy.c  snrm2.c  sphfd.c  sphfdloc.c  sphrayderv.c  sscal.c  string_process.c  time_process.c
src/pythonModules/: FDtomo.py  bindToPython.py  coordinate.py  demo_small.py  derivative.py  environment.py  event.py  grid_header.py  mesh.py  model_header.py  perturbation.py  point.py  residual.py  station.py  tomography.py  travel_time.py  velocity_model.py
src/pythonModules/exportHeader/: env_header.py  event_header.py  grid_header.py  model_header.py  spec_header.py  station_header.py  travelTimeTable.py
verification/: README.md  compare.txt  model_translate.c
verification/cmod/: M001.ptimes  tempvel
verification/fmod/: M001.ptimes  tempvel
