SET(PROGS
	make1d
	c2f
	sphfd
	sphfdloc
	sphrayderv
	runlsqr
	makenewmod
)

ADD_EXECUTABLE(Fdtomo FDtomo.c)
FOREACH(prog ${PROGS})
	TARGET_LINK_LIBRARIES(Fdtomo
		${prog}
	)
ENDFOREACH()

TARGET_INCLUDE_DIRECTORIES(Fdtomo PUBLIC
	${MAIN_INCLUDE_DIR}
	${MAIN_INCLUDE_DIR}/FDtomo
)

add_custom_command(
	TARGET
		Fdtomo
	COMMAND
		${CMAKE_COMMAND} -E env CURRENTDIR=${CMAKE_BINARY_DIR}
								COMMON=$<TARGET_FILE:_common>
		${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/bindToPython.py
	WORKING_DIRECTORY
		${CMAKE_BINARY_DIR}
	COMMENT
		${CMAKE_BINARY_DIR}
)
